// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxMultiselect renders by default 1`] = `
.c3 {
  display: inline-block;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 1rem;
}

.c5 {
  display: inline-block;
  margin-left: 1.75rem;
  color: #8697A2;
}

.c5::before,
.c5::after {
  content: "";
  position: absolute;
  width: 1rem;
  height: 1rem;
  top: 0.0625rem;
  left: 0;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  -webkit-transition-timing-function: ease;
  transition-timing-function: ease;
}

.c5::before {
  background-color: #4C5159;
  border-radius: 50%;
  opacity: 0;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  -webkit-transition-property: background-color,-webkit-transform,opacity;
  -webkit-transition-property: background-color,transform,opacity;
  transition-property: background-color,transform,opacity;
  will-change: transform,opacity;
}

.c5::after {
  border: 0.125rem solid #8697A2;
  border-radius: 0.125rem;
  background-color: transparent;
  -webkit-transition-property: border-color;
  transition-property: border-color;
}

.c4 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c4 + span {
  cursor: pointer;
}

.c4 + span::after {
  background-image: url('data:image/svg+xml;utf8, %3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%25%22%20height%3D%22auto%22%20fill%3D%22none%22%20viewBox%3D%220%200%2020%2014%22%3E%3Cpath%20fill%3D%22%23FFFFFF%22%20fill-rule%3D%22evenodd%22%20d%3D%22M18%200c-.56%200-1.06.22-1.42.58L8%209.18l-4.58-4.6C3.06%204.22%202.56%204%202%204%20.9%204%200%204.9%200%206c0%20.56.22%201.06.58%201.42l6%206c.36.36.86.58%201.42.58.56%200%201.06-.22%201.42-.58l10-10c.36-.36.58-.86.58-1.42%200-1.1-.9-2-2-2z%22%20clip-rule%3D%22evenodd%22%3E%3C%2Fpath%3E%3C%2Fsvg%3E');
  background-repeat: no-repeat;
  background-position: center;
  background-size: 0;
}

.c4:hover:enabled + span::before,
.c4:focus:enabled + span::before {
  opacity: 0.5;
  -webkit-transform: scale(2);
  -ms-transform: scale(2);
  transform: scale(2);
}

.c4:hover:enabled:checked + span::before,
.c4:focus:enabled:checked + span::before {
  opacity: 0.1;
  background-color: #0CD463;
}

.c4:hover:enabled:not(:checked) + span::after,
.c4:focus:enabled:not(:checked) + span::after {
  border-color: #8697A2;
}

.c4:checked + span::after {
  background-color: #0CD463;
  background-size: 0.625rem;
  border-color: #0CD463;
}

.c4[disabled] + span {
  opacity: 0.5;
  cursor: not-allowed;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  overflow: hidden;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: calc(0.25rem / 2 * -1);
}

.c1 > * {
  margin: calc(0.25rem / 2);
}

.c1 > li {
  list-style-type: none;
}

.c1 > li:before {
  position: absolute;
  content: "\\200B";
}

.c0 {
  overflow: auto;
  list-style: none;
  padding: 0;
  margin: 0 -0.75rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 0.875rem;
  line-height: 1.25rem;
  padding: 0.625rem 0.75rem;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  border: none;
  text-align: left;
  cursor: pointer;
  color: #FFFFFF;
  background-color: transparent;
}

.c2 span::before {
  display: none;
}

.c2:hover,
.c2:focus {
  background-color: #232A33;
}

<ul
  className="c0"
  style={
    Object {
      "maxHeight": 250,
    }
  }
>
  <div
    className="c1"
  >
    <label
      className="c2"
    >
      <label
        className="c3"
        htmlFor="1"
      >
        <input
          checked={false}
          className="c4"
          disabled={false}
          id="1"
          onChange={[Function]}
          type="checkbox"
        />
        <span
          className="c5"
        >
          Game 1
        </span>
      </label>
    </label>
  </div>
  <div
    className="c1"
  >
    <label
      className="c2"
    >
      <label
        className="c3"
        htmlFor="2"
      >
        <input
          checked={false}
          className="c4"
          disabled={false}
          id="2"
          onChange={[Function]}
          type="checkbox"
        />
        <span
          className="c5"
        >
          Game 2
        </span>
      </label>
    </label>
  </div>
  <div
    className="c1"
  >
    <label
      className="c2"
    >
      <label
        className="c3"
        htmlFor="3"
      >
        <input
          checked={false}
          className="c4"
          disabled={false}
          id="3"
          onChange={[Function]}
          type="checkbox"
        />
        <span
          className="c5"
        >
          Game 3
        </span>
      </label>
    </label>
  </div>
</ul>
`;

exports[`CheckboxMultiselect renders with pre-selected value 1`] = `
.c3 {
  display: inline-block;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 1rem;
}

.c5 {
  display: inline-block;
  margin-left: 1.75rem;
  color: #8697A2;
}

.c5::before,
.c5::after {
  content: "";
  position: absolute;
  width: 1rem;
  height: 1rem;
  top: 0.0625rem;
  left: 0;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  -webkit-transition-timing-function: ease;
  transition-timing-function: ease;
}

.c5::before {
  background-color: #4C5159;
  border-radius: 50%;
  opacity: 0;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  -webkit-transition-property: background-color,-webkit-transform,opacity;
  -webkit-transition-property: background-color,transform,opacity;
  transition-property: background-color,transform,opacity;
  will-change: transform,opacity;
}

.c5::after {
  border: 0.125rem solid #8697A2;
  border-radius: 0.125rem;
  background-color: transparent;
  -webkit-transition-property: border-color;
  transition-property: border-color;
}

.c4 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c4 + span {
  cursor: pointer;
}

.c4 + span::after {
  background-image: url('data:image/svg+xml;utf8, %3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%25%22%20height%3D%22auto%22%20fill%3D%22none%22%20viewBox%3D%220%200%2020%2014%22%3E%3Cpath%20fill%3D%22%23FFFFFF%22%20fill-rule%3D%22evenodd%22%20d%3D%22M18%200c-.56%200-1.06.22-1.42.58L8%209.18l-4.58-4.6C3.06%204.22%202.56%204%202%204%20.9%204%200%204.9%200%206c0%20.56.22%201.06.58%201.42l6%206c.36.36.86.58%201.42.58.56%200%201.06-.22%201.42-.58l10-10c.36-.36.58-.86.58-1.42%200-1.1-.9-2-2-2z%22%20clip-rule%3D%22evenodd%22%3E%3C%2Fpath%3E%3C%2Fsvg%3E');
  background-repeat: no-repeat;
  background-position: center;
  background-size: 0;
}

.c4:hover:enabled + span::before,
.c4:focus:enabled + span::before {
  opacity: 0.5;
  -webkit-transform: scale(2);
  -ms-transform: scale(2);
  transform: scale(2);
}

.c4:hover:enabled:checked + span::before,
.c4:focus:enabled:checked + span::before {
  opacity: 0.1;
  background-color: #0CD463;
}

.c4:hover:enabled:not(:checked) + span::after,
.c4:focus:enabled:not(:checked) + span::after {
  border-color: #8697A2;
}

.c4:checked + span::after {
  background-color: #0CD463;
  background-size: 0.625rem;
  border-color: #0CD463;
}

.c4[disabled] + span {
  opacity: 0.5;
  cursor: not-allowed;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  overflow: hidden;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: calc(0.25rem / 2 * -1);
}

.c1 > * {
  margin: calc(0.25rem / 2);
}

.c1 > li {
  list-style-type: none;
}

.c1 > li:before {
  position: absolute;
  content: "\\200B";
}

.c0 {
  overflow: auto;
  list-style: none;
  padding: 0;
  margin: 0 -0.75rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 0.875rem;
  line-height: 1.25rem;
  padding: 0.625rem 0.75rem;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  border: none;
  text-align: left;
  cursor: pointer;
  color: #FFFFFF;
  background-color: transparent;
}

.c2 span::before {
  display: none;
}

.c2:hover,
.c2:focus {
  background-color: #232A33;
}

<ul
  className="c0"
  style={
    Object {
      "maxHeight": 250,
    }
  }
>
  <div
    className="c1"
  >
    <label
      className="c2"
    >
      <label
        className="c3"
        htmlFor="1"
      >
        <input
          checked={true}
          className="c4"
          disabled={false}
          id="1"
          onChange={[Function]}
          type="checkbox"
        />
        <span
          className="c5"
        >
          Game 1
        </span>
      </label>
    </label>
  </div>
  <div
    className="c1"
  >
    <label
      className="c2"
    >
      <label
        className="c3"
        htmlFor="2"
      >
        <input
          checked={true}
          className="c4"
          disabled={false}
          id="2"
          onChange={[Function]}
          type="checkbox"
        />
        <span
          className="c5"
        >
          Game 2
        </span>
      </label>
    </label>
  </div>
  <div
    className="c1"
  >
    <label
      className="c2"
    >
      <label
        className="c3"
        htmlFor="3"
      >
        <input
          checked={false}
          className="c4"
          disabled={false}
          id="3"
          onChange={[Function]}
          type="checkbox"
        />
        <span
          className="c5"
        >
          Game 3
        </span>
      </label>
    </label>
  </div>
</ul>
`;
